--- a/App.config
+++ b/App.config
@@ -22,6 +22,11 @@
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
   </system.data>
+  <connectionStrings>
+    <add name="ILSDBEntities" connectionString="metadata=res://*/ILSDBModel.csdl|res://*/ILSDBModel.ssdl|res://*/ILSDBModel.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=E:\Code\Git\FayeKeyILS\ILSDB.db&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
