--- a/FayeKeyILS.csproj
+++ b/FayeKeyILS.csproj
@@ -100,6 +100,12 @@
     <Compile Include="LoanLength.cs">
       <DependentUpon>ILSDBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="MatAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatAdd.Designer.cs">
+      <DependentUpon>MatAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Material.cs">
       <DependentUpon>ILSDBModel.tt</DependentUpon>
     </Compile>
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatAdd.resx">
+      <DependentUpon>MatAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
