--- a/App.config
+++ b/App.config
@@ -28,6 +28,6 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="ILSDBEntities" connectionString="metadata=res://*/ILSDBModel.csdl|res://*/ILSDBModel.ssdl|res://*/ILSDBModel.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=E:\Code\Git\FayeKeyILS\ILSDB.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="ILSDBEntities" connectionString="metadata=res://*/ILSDBModel.csdl|res://*/ILSDBModel.ssdl|res://*/ILSDBModel.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\James\source\repos\ASatiricalDalek\CSharp_FayeKeyILS\ILSDB.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
